Change Log

20220408 V8.2.1 SCL
- fix bug: SaveSettings() should save GetMaxCurrentCapacity() instead of GetCurrentCapacity(), in case called during throttling
	
20220124 V8.2.0 SCL
- don't convert 0x01 in $FP strings to <SPC>, because it filters out STOP icon
  -> just send 0x11 as space instead. prints as <SPC> on HD44780
- bump RAPIVER to 5.2.1
- change index of delay timer CLOCK icon from 0 -> 6, because otherwise, it can't be displayed via $FP
- fix bug, wasn't overriding OBD::updatesDisabled() during fault state
	
20220119 SCL
- changes to facilitate PlatformIO builds
  -> #defines that apply to Arduino IDE builds should be kept out of the #ifndef PLATFORMIO block in open_evse.h
	
20220107 SCL
- set ECF_AUTO_SVC_LEVEL_DISABLED when !AUTOSVCLEVEL

20211216 SCL V8.1.1
- reset elapsed time when car plugged in
- J1772EvseController::Update() - just call ReadPilot() once at the top of function
  -> previously had ReadPilot() sprinkled around to try to avoid reading when not needed to save CPU cycles -> probably not necssary

20211216 SCL V8.1.0
- merged in mennekes branch
- change version number
	
20211201 SCL V8.1.0a
- added ECVF_TIMER_ON so we don't have to poll to test if delay timer is on
- revamp MENNEKES_LOCK
  -> auto mode: locked when EVSE connected, unlocked when disconnected
     -> to implement this, need to get rid of states were pilot = N12, because
	we can't detect connection state
	-> don't ever set pilot to N12, even in fault states. only set to N12 
	in EVSE_STATE_DISABLED
	  -> always automatically unlocks in EVSE_STATE_DISABLED, even if
	  in manual mode
	-> add recoverable parameter to HardFault()
  -> add volatile manual mode - when enabled, Mennekes lock is under full manual
	control
  -> add S5/G5 RAPI commands to set/fetch Mennekes settings
  -> ECVF_MENNEKES_MANUAL also reflects auto/manual mode
- RAPIVER 5.2.0
- usurped ECVF_AMMETER_CAL with ECVF_MENNEKES_MANUAL, so the code is currently turned off
20211201 SCL V8.0.0d