@@ -22,9 +22,11 @@ typedef struct pp_amps {
 
 class AutoCurrentCapacityController {
   AdcPin adcPP;
+  uint8_t ppMaxAmps;
 
 public:
   AutoCurrentCapacityController();
+  uint8_t GetPPMaxAmps() { return ppMaxAmps; }
   uint8_t ReadPPMaxAmps();
   uint8_t AutoSetCurrentCapacity();
 };
