@@ -1,5 +1,14 @@
 Change Log
 
+20230207 SCL
+- PP_AUTO_AMPACITY changes
+  -> used to change current capacity to PP ampacity. now, only change it
+	if currently higher than PP ampacity
+  -> GetMaxCurrentCapacity() is limited to PP ampacity in STATE B/C
+	
+20230206 SCL
+- added BOOTLOCK - when defined, EVSE locked until receives $SB
+
 20220408 V8.2.1 SCL
 - fix bug: SaveSettings() should save GetMaxCurrentCapacity() instead of GetCurrentCapacity(), in case called during throttling
 	
